scripts/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banana-stg-dev
  namespace: banana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: Authorization, origin, accept
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, OPTIONS, POST, PUT, DELETE
    nginx.ingress.kubernetes.io/enable-cors: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "35000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "35000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "35000"
    nginx.ingress.kubernetes.io/send-timeout: "35000"
spec:
  rules:
    - host: banana-stg-dev.thecodeworkers.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: banana-stg-web-service
                port:
                  number: 3000
    - host: bananacreative.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: banana-stg-web-service
                port:
                  number: 3000
    - host: www.bananacreative.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: banana-stg-web-service
                port:
                  number: 3000
  tls:
    - hosts:
      - banana-stg-dev.thecodeworkers.com
      secretName: banana-stg-dev-thecodeworkers-com-tls
    - hosts:
      - bananacreative.io
      secretName: banana-stg-dev-thecodeworkers-com-tls
    - hosts:
      - www.bananacreative.io
      secretName: banana-stg-dev-thecodeworkers-com-tls
