scripts/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banana-stg-web-service
  namespace: banana
  labels:
    app: banana-stg-web
spec:
  ports:
    - name: banana-stg-web
      port: 3000
  selector:
    app: banana-stg-web
